fix: Floating startbar due to wrong height in main div

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -9,7 +9,7 @@
   min-height: 100vh;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  height: 1vh;
 }
 
 .description {
